# qtf

./: .doxygen  .gitignore  .stignore  CMakeLists.txt  Makefile  README.md  apt.txt
cmake/: FindREADLINE.cmake  Linux.cmake  Linux_.cmake  Qt.cmake  Windows.cmake  Windows_.cmake  skelex.cmake
inc/: CAD.hpp  MainWindow.hpp  main.hpp
lib/: qtf.ini
src/: MainWindow.cpp  main.cpp  qtf.lex  qtf.yacc
